Wed Dec  2 10:36:25 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c: Fix double word typo.
	  [ci skip][fix GH-1120] Patch by @jwworth

Wed Dec  2 07:43:51 2015  Eric Wong  <e@80x24.org>

	* ext/openssl/ossl_ssl.c (mSSLExtConfig): make static
	  (eSSLError): ditto
	  (ID_callback_state): ditto
	  (ossl_ssl_ex_vcb_idx): ditto
	  (ossl_ssl_ex_store_p): ditto
	  (ossl_ssl_ex_ptr_idx): ditto
	* ext/openssl/ossl_ssl.h: remove extern declarations for
	  mSSLExtConfig and eSSLError

Wed Dec  2 07:41:08 2015  Eric Wong  <e@80x24.org>

	* missing/explicit_bzero.c (explicit_bzero): fixup r52839
	  for compilers with "weak" attribute

Wed Dec  2 06:47:25 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add ruby_explicit_bzero_hook_unused
	  for preventing optimization. Inspired from OpenBSD.

Tue Dec  1 23:36:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_setname): allow to reset thread name.

Tue Dec  1 23:14:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_setname): check the argument if valid
	  string.  [ruby-core:71774] [Bug #11756]

Tue Dec  1 17:13:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_string_value_cstr): should not raise on frozen
	  string.

Tue Dec  1 09:35:29 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add a few comment.

Tue Dec  1 09:31:19 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add disabling optimization on gcc.

Tue Dec  1 07:50:33 2015  Eric Wong  <e@80x24.org>

	* missing/explicit_bzero.c: new file. define explicit_bzero.
	  Fixup r52806

Thu Oct 22 12:54:43 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (register_ubf_list): renamed from
	  add_signal_thread_list.
	* thread_pthread.c (unregister_ubf_list): renamed
	  from remove_signal_thread_list.
	* thread_pthread.c (ubf_wakeup_all_threads): renamed from